--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -36,7 +36,12 @@
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Effect.js"></script>
 			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
+			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionMove.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionAttack.js"></script>
 			
