--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -7,6 +7,7 @@
 		
 		<!-- ==========	Render ====================== -->
 			<link rel="stylesheet" href="Assets/Render/GameWorldRenderer.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/TileHighlight.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Main.css" type="text/css" media="screen">
 		
 	</head>
@@ -56,6 +57,7 @@
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/Components/CTileRendering.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Components/CTileHighlight.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CTilePlaceableRendering.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/WorldLayers.js"></script>
