* Added blank concept of Unit. * Improved CTilePlaceableRendering by rendering to the correct layer (Unit, building etc...)

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -45,6 +45,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionMove.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionAttack.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
 			
 			
 			
@@ -59,6 +60,7 @@
 			<script type="text/javascript" src="Javascript/Render/Components/CTileRendering.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CTileHighlight.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CTilePlaceableRendering.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Components/CUnitRendering.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/WorldLayers.js"></script>
 			<script type="text/javascript" src="Javascript/Render/GameWorldRenderer.js"></script>
