* Added concept of Health to all units. Render health over unit. * Attack action now does 1 damage. * Added finalyzeAdd Multicast Message, to be called after all components have been added. * All units can have effects applied now. * Re-factor: simplified destroy of all rendering components.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -7,6 +7,7 @@
 		
 		<!-- ==========	Render ====================== -->
 			<link rel="stylesheet" href="Assets/Render/GameWorldRenderer.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileHighlight.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Main.css" type="text/css" media="screen">
 		
