Entity-Component-System major refactor: * Applied Entity-Component-System pattern to the game actions (move, attack etc...) * Actions are now global classes to be reused.
Note: Statistics and effects are still are yet to be implemented, as well as the ActionAttack.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -53,9 +53,12 @@
 		<!--
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionMove.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionAttack.js"></script>
-		-->	<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
+		-->	<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActions.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
+			
+		<!-- Actions -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			
 			
 			
