--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -53,9 +53,12 @@
 		<!--
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionMove.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActionAttack.js"></script>
-		-->	<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
+		-->	<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActions.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
+			
+		<!-- Actions -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			
 			
 			
