* Health is now rendered on screen and refreshed on change. * Specialized the TilePlaceableRenderingSystem to UnitRenderingSystem. * Separated events to a common place instead of being system specific. * ECS: Added hasComponents functionality.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -38,11 +38,18 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/SampleUsage.js"></script>
 			
 			
-		<!-- Engine/Gameplay -->
+		<!-- Engine -->
+			<script type="text/javascript" src="Javascript/Core/Engine/EngineEvents.js"></script>
+			
 			<script type="text/javascript" src="Javascript/Core/Engine/Components/CTile.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Components/CTilePlaceable.js"></script>
 			
-			<script type="text/javascript" src="Javascript/Core/Engine/GameWorld.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Systems/GameWorld.js"></script>
+			
+			
+		<!-- Gameplay -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/GameplayEvents.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
@@ -77,7 +84,7 @@
 			<script type="text/javascript" src="Javascript/Render/WorldLayers.js"></script>
 			<script type="text/javascript" src="Javascript/Render/GameWorldRenderer.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
-			<script type="text/javascript" src="Javascript/Render/Systems/TilePlaceableRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 			
 			
