* Units are now destroyed, when their health reaches zero. * Created common ClientEvents. * Fixed: some bugs on clearing placeables.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -75,6 +75,8 @@
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/iscroll.js"></script> <!-- TODO: Use LITE, min version -->
 		
 		<!-- Javascripts -->
+			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
+			
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/Components/CTileRendering.js"></script>
