--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -54,6 +54,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
