* Added proper initialization of health. * Created the UnitSystem that deals with unit events, like dying. * Added name to the units. The name is now used to choose the skin. * Placeable/Unit rendering components are now added by the UnitRenderingSystem (moved out of the Core). * Added different set of statistics for the 3 types of units - WarMiner, RhinoTank, TeslaTrooper.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -54,6 +54,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
