* Added serialization to/from JSON tool. * Registered components for serializations (or excluded the unneeded). Also ECS classes and Effects. * Deserialized un-managed entities now can be added to the world. * Adapted Actions to be able to serialize. * CTileRendering component is now added/removed by the TileRenderingSystem. * Fixed bug: when removing selected tile, can't select another one.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -37,6 +37,10 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/EntityComponentFilter.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/SampleUsage.js"></script>
 			
+		<!-- Serialization -->
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Serialization.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/ECSSerialization.js"></script>
+			
 			
 		<!-- Engine -->
 			<script type="text/javascript" src="Javascript/Core/Engine/EngineEvents.js"></script>
