--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -37,6 +37,10 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/EntityComponentFilter.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/SampleUsage.js"></script>
 			
+		<!-- Serialization -->
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Serialization.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/ECSSerialization.js"></script>
+			
 			
 		<!-- Engine -->
 			<script type="text/javascript" src="Javascript/Core/Engine/EngineEvents.js"></script>
