--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -18,6 +18,12 @@
 		<div id="Screen">
 			<div id="GameWorldMap">
 			</div>
+			<div id="Toolbar">
+				<button id="BtnSave">Save</button>
+				<button id="BtnLoad">Load</button>
+				<button id="BtnRemoveTile">Remove</button>
+				<button id="BtnRestart">Restart</button>
+			</div>
 		</div>		
 
 		
