* ECS refactor: Entities now can be managed and unmanaged. Unmanaged entities can be attached to specific world to become managed. * Refactor: Simplified GameWorld system to use ENTITY_ADDED and ENTITY_REMOVED events instead of custom methods. * Applied serialization to the world/systems. * Added: developer toolbar for simple commands: Save, Load, Remove, Restart.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -18,6 +18,12 @@
 		<div id="Screen">
 			<div id="GameWorldMap">
 			</div>
+			<div id="Toolbar">
+				<button id="BtnSave">Save</button>
+				<button id="BtnLoad">Load</button>
+				<button id="BtnRemoveTile">Remove</button>
+				<button id="BtnRestart">Restart</button>
+			</div>
 		</div>		
 
 		
