--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -84,6 +84,7 @@
 		<!-- 3rd Party -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/wormhole.js"></script>
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/iscroll.js"></script> <!-- TODO: Use LITE, min version -->
+			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/sprite.js"></script>
 		
 		<!-- Javascripts -->
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
