--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -91,12 +91,20 @@
 			
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
 			
+		<!-- Animations -->
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
+		
+		<!-- Components -->	
+			<script type="text/javascript" src="Javascript/Render/Components/CAnimations.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CTileRendering.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CTilePlaceableRendering.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Components/CUnitRendering.js"></script>
 			
+		<!-- Systems -->	
 			<script type="text/javascript" src="Javascript/Render/WorldLayers.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Animator.js"></script>
 			<script type="text/javascript" src="Javascript/Render/GameWorldRenderer.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
