--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -87,6 +87,7 @@
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/sprite.js"></script>
 		
 		<!-- Javascripts -->
+			<script type="text/javascript" src="Javascript/Render/RenderEvents.js"></script>
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
