* Added notifications on animation end. * Added support for repeating and run-once animation. Repeating animation can have duration defined. * Fixed bug where last frame of animation was skipped. * On animation end, all units return to Idle still image.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -87,6 +87,7 @@
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/sprite.js"></script>
 		
 		<!-- Javascripts -->
+			<script type="text/javascript" src="Javascript/Render/RenderEvents.js"></script>
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
