* Added namespaces to actions. * Prevent actions from adding to current choice, when have nothing to do. * Moved Actions rendering to a separate class. * Added Actions menu that is synchronized with the rendered actions on the map.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -10,6 +10,7 @@
 			<link rel="stylesheet" href="Assets/Render/TileRenderingSystem.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileHighlight.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/ActionMenu.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Main.css" type="text/css" media="screen">
 		
 	</head>
@@ -23,6 +24,9 @@
 				<button id="BtnLoad">Load</button>
 				<button id="BtnRemoveTile">Remove</button>
 				<button id="BtnRestart">Restart</button>
+			</div>
+			
+			<div id="ActionMenu" style="display: none;">
 			</div>
 		</div>		
 
@@ -105,10 +109,14 @@
 			<script type="text/javascript" src="Javascript/Render/WorldLayers.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Animator.js"></script>
 			<script type="text/javascript" src="Javascript/Render/GameWorldRenderer.js"></script>
+			<script type="text/javascript" src="Javascript/Render/ActionsRender.js"></script>
+			
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
+			
+			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 			
 			
