* Added concept of players (serialized). * Added Blackboard feature to the EntityWorld. * Added postDeserialize feature to serialization.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -67,6 +67,7 @@
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/PlayersData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
@@ -78,6 +79,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CPlayerData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActions.js"></script>
