* Changed sprites path to be relative. * Included the colorId inside the sprite relative path (and added 0 and 1 colors sprites). * Added button for changing current player.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -24,6 +24,7 @@
 				<button id="BtnLoad">Load</button>
 				<button id="BtnRemoveTile">Remove</button>
 				<button id="BtnRestart">Restart</button>
+				<button id="BtnPlayer">Player</button>
 			</div>
 			
 			<div id="ActionMenu" style="display: none;">
