--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -24,6 +24,7 @@
 				<button id="BtnLoad">Load</button>
 				<button id="BtnRemoveTile">Remove</button>
 				<button id="BtnRestart">Restart</button>
+				<button id="BtnPlayer">Player</button>
 			</div>
 			
 			<div id="ActionMenu" style="display: none;">
