* Added concept of relationship between players (Ally, Enemy). * Current player cannot attack his own or ally units and can pass over them. * When selecting non-current player unit, actions are shown, but cannot be executed.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -22,8 +22,8 @@
 			<div id="Toolbar">
 				<button id="BtnSave">Save</button>
 				<button id="BtnLoad">Load</button>
-				<button id="BtnRemoveTile">Remove</button>
-				<button id="BtnRestart">Restart</button>
+				<button id="BtnRemoveTile">Rem</button>
+				<button id="BtnRestart">Res</button>
 				<button id="BtnPlayer">Player</button>
 			</div>
 			
