* Added ability for action animations (right before executing them). * Enhanced the input to block until the attack animations have finished.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -120,6 +120,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/ActionsRenderingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
