* Added rendering support for different types of terrain tiles. * Moved out debug rendering to a button. * Randomly generate different kinds of terrain tiles. * Added terrain type Dirt.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -25,6 +25,7 @@
 				<button id="BtnRemoveTile">Rem</button>
 				<button id="BtnRestart">Res</button>
 				<button id="BtnPlayer">Player</button>
+				<button id="BtnDebug">Debug</button>
 			</div>
 			
 			<div id="ActionMenu" style="display: none;">
@@ -80,6 +81,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CTileTerrain.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CPlayerData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
