* Made the developer toolbar scrollable.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -19,13 +19,15 @@
 		<div id="Screen">
 			<div id="GameWorldMap">
 			</div>
-			<div id="Toolbar">
-				<button id="BtnSave">Save</button>
-				<button id="BtnLoad">Load</button>
-				<button id="BtnRemoveTile">Rem</button>
-				<button id="BtnRestart">Res</button>
-				<button id="BtnPlayer">Player</button>
-				<button id="BtnDebug">Debug</button>
+			<div id="ToolbarContainer">
+				<div id="Toolbar">
+					<button id="BtnSave">Save</button>
+					<button id="BtnLoad">Load</button>
+					<button id="BtnRemoveTile">Rem</button>
+					<button id="BtnRestart">Res</button>
+					<button id="BtnPlayer">Player</button>
+					<button id="BtnDebug">Debug</button>
+				</div>
 			</div>
 			
 			<div id="ActionMenu" style="display: none;">
