--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -71,7 +71,9 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlayersData.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/GameState.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
 			
