* Added GameState concept, that holds the currentPlayer and other game data/statistics. * Added GameStateSystem to monitor and change player turns. Responds correctly to added/removed/disabled players. * Improved blackboard usage with short-cut methods. * Fixed minor bugs with PlayersData usage and serialization.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -71,7 +71,9 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/TerrainType.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlayersData.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/GameState.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
 			
