* Added object invalidator. * Fixed small bug with old refs.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -41,6 +41,7 @@
 		
 		<!-- Javascripts -->
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Enums.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Utils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Subscriber.js"></script>
 			
 		<!-- ECS system -->
