--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -53,10 +53,9 @@
 			
 		<!-- Serialization -->
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Serialization.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Engine/Utils/ECSSerialization.js"></script>
-			
 			
 		<!-- Engine -->
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/ECSUtils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/EngineEvents.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Engine/Components/CTile.js"></script>
@@ -74,23 +73,26 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlayersData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameState.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
 			
-		<!-- Actions -->
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
-			
-			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
-			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
-			
+		<!-- Gameplay - Components -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CTileTerrain.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CPlayerData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CEffects.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CActions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
+			
+		<!-- Gameplay - Systems -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
+			
+		<!-- Gameplay - Actions -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
+			
+			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
 			
 			
