* Moved out actions fog drawing out of PlayerController * Preparing for visibility fog. * Adapted more systems to the new ways.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -126,6 +126,7 @@
 			<script type="text/javascript" src="Javascript/Render/ActionsRender.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/ActionFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
