--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -40,6 +40,7 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/3rdParty/underscore.js"></script>
 		
 		<!-- Javascripts -->
+			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Array.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Enums.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Utils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Subscriber.js"></script>
