--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta name="viewport" content="width=320, user-scalable=no">
@@ -76,6 +76,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/GameExecutor.js"></script>
 			
 		<!-- Gameplay - Components -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CTileVisibility.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CTileTerrain.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CPlayerData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CStatistics.js"></script>
@@ -84,6 +85,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Components/CUnit.js"></script>
 			
 		<!-- Gameplay - Systems -->
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileVisibilitySystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
@@ -128,6 +130,7 @@
 			
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionFogRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/VisibilityFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
