* Added debug button for browsing given address. By default, browsers to a home developing folder.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -26,6 +26,10 @@
 					<button id="BtnRestart">Res</button>
 					<button id="BtnPlayer">Player</button>
 					<button id="BtnDebug">Debug</button>
+
+					<button id="BtnBrowse" style="display: none;">Browse</button>
+					<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
+					<button id="BtnAddress">Address</button>
 				</div>
 			</div>
 			
