--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -116,6 +116,10 @@
 			
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
 			<script type="text/javascript" src="Javascript/UnitFactoryClient.js"></script>
+
+		<!-- Utils -->
+			<script type="text/javascript" src="Javascript/Render/ImageUtils/Colors.js"></script>
+			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteColorizeManager.js"></script>
 			
 		<!-- Animations -->
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
