* Improved the canvas update pipeline. Now all sprites are monitored for animation progress and refresh only their layers (redraw the sprites in it). * Keep track of all the created sprites.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -120,6 +120,7 @@
 		<!-- Utils -->
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/Colors.js"></script>
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteColorizeManager.js"></script>
+			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteTracker.js"></script>
 			
 		<!-- Animations -->
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
@@ -137,6 +138,7 @@
 			<script type="text/javascript" src="Javascript/Render/ActionsRender.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/LayersUpdateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/VisibilityFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
