* Improved EntityComponentFilter API to be more useful: added/removed notification; custom predicate handler. * Enhanced flow by automatically invalidating any removed entity after everybody is done with it (async event). * Small Array, Enums and ECSUtils improvements. Corrected some typos.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -49,7 +49,7 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Utils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Utils/Subscriber.js"></script>
 			
-		<!-- ECS system -->
+		<!-- ECS framework -->
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/Entity.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/EntityWorld.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/ECS/EntityManager.js"></script>
@@ -66,6 +66,7 @@
 			<script type="text/javascript" src="Javascript/Core/Engine/Components/CTile.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Components/CTilePlaceable.js"></script>
 			
+			<script type="text/javascript" src="Javascript/Core/Engine/Systems/UtilsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Systems/GameWorld.js"></script>
 			
 			
