* Added Capture unit action for the TeslaTroopers. * Implemented capturing system/flow. Now any tiles with CTileOwner can be captured in any number of turns. * Refreshing visibility fog & game state on capturing building. * If action is special kind (like Capture) it is executed instantly, rather than having to click on a tile. * Changed colorize and saturate functions to always work with original sprite.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -93,6 +93,7 @@
 		<!-- Gameplay - Systems -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileVisibilitySystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileBaseSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileCapturingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
@@ -100,6 +101,7 @@
 		<!-- Gameplay - Actions -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
