--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -93,6 +93,7 @@
 		<!-- Gameplay - Systems -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileVisibilitySystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileBaseSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileCapturingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
@@ -100,6 +101,7 @@
 		<!-- Gameplay - Actions -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
